# tidal-mcp

./: .env.example  .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml
.claude/plans/: README.md  session-state.md
.github/workflows/: ci.yml
.serena/: project.yml
.serena/memories/: code_style.md  codebase_structure.md  design_patterns.md  project_overview.md  suggested_commands.md  task_completion.md  tidal_client_architecture.md
docs/: claude-code.md  development.md  patterns.md  setup.md  tidalapi-patch.md  troubleshooting.md  workflows.md
docs/tools/: artists.md  authentication.md  playlists.md  search.md  tracks.md
mcp_server/: mcp_app.py  server.py  utils.py
mcp_server/tools/: __init__.py  albums.py  artists.py  auth.py  discovery.py  favorites.py  mixes.py  playlists.py  search.py  tracks.py
patches/: tidalapi-session.patch
script/: bootstrap  ci  lint  start  test
scripts/: apply-patches.sh
tests/: conftest.py  test_app.py  test_dual_mode.py  test_mcp_tools.py  test_mcp_utils.py  test_utils.py
tests/integration/: __init__.py  test_auth_integration.py
tests/mcp_server/: __init__.py  conftest.py  test_albums.py  test_artists.py  test_auth.py  test_discovery.py  test_favorites.py  test_mixes.py  test_playlists.py  test_search.py  test_utils.py
tests/tidal_api/: __init__.py  conftest.py  test_albums.py  test_artists.py  test_auth.py  test_discovery.py  test_favorites.py  test_mixes.py  test_playlists.py  test_utils.py  (+1 more)
tidal_api/: app.py  browser_session.py  utils.py
tidal_client/: auth.py  config.py  exceptions.py  session.py
(+36 files in other folders)
